@@ -387,6 +387,7 @@ gnc_item_list_new(GnomeCanvasGroup *parent)
         item_list = GNC_ITEM_LIST (item);
 
 	item_list->clist = GTK_CLIST (clist);
+        item_list->frame = frame;
 
 	gtk_signal_connect_after(GTK_OBJECT(frame), "button_press_event",
 				 GTK_SIGNAL_FUNC(gnc_item_list_button_event),
